--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,33 @@
 anyio==3.6.2
-autopep8==2.0.0
-certifi==2022.9.24
+bcrypt==4.0.1
+certifi==2022.12.7
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
 commonmark==0.9.1
-fastapi==0.87.0
+cryptography==38.0.4
+deta==1.1.0
+ecdsa==0.18.0
+fastapi==0.88.0
 h11==0.14.0
-httpcore==0.16.1
+httpcore==0.16.2
 httpx==0.23.1
 idna==3.4
-pycodestyle==2.9.1
+passlib==1.7.4
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
 python-dateutil==2.8.2
+python-jose==3.3.0
+python-multipart==0.0.5
 rfc3986==1.5.0
 rich==12.6.0
+rsa==4.9
 shellingham==1.5.0
 six==1.16.0
 sniffio==1.3.0
-starlette==0.21.0
-tomli==2.0.1
+starlette==0.22.0
 typer==0.7.0
 typing_extensions==4.4.0
-uvicorn==0.19.0
+uvicorn==0.20.0
