--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+autopep8==2.0.1
 bcrypt==4.0.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -15,6 +16,7 @@ httpx==0.23.1
 idna==3.4
 passlib==1.7.4
 pyasn1==0.4.8
+pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
@@ -28,6 +30,7 @@ shellingham==1.5.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.22.0
+tomli==2.0.1
 typer==0.7.0
 typing_extensions==4.4.0
 uvicorn==0.20.0
