--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
 rfc3986==1.5.0
