--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==2.0.1
 bcrypt==4.0.1
 certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 commonmark==0.9.1
@@ -24,6 +25,7 @@ python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
+requests==2.28.1
 rfc3986==1.5.0
 rich==12.6.0
 rsa==4.9
@@ -34,4 +36,5 @@ starlette==0.22.0
 tomli==2.0.1
 typer==0.7.0
 typing_extensions==4.4.0
+urllib3==1.26.13
 uvicorn==0.20.0
