--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,23 +8,29 @@ click==8.1.3
 colorama==0.4.6
 commonmark==0.9.1
 cryptography==38.0.4
+DateTime==4.8
 deta==1.1.0
+dnspython==2.3.0
 ecdsa==0.18.0
+email-validator==1.3.0
 fastapi==0.88.0
 h11==0.14.0
 httpcore==0.16.2
 httpx==0.23.1
 idna==3.4
 passlib==1.7.4
+path==16.6.0
 pyasn1==0.4.8
 pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
+PyJWT==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
+pytz==2022.7
 requests==2.28.1
 rfc3986==1.5.0
 rich==12.6.0
@@ -38,3 +44,4 @@ typer==0.7.0
 typing_extensions==4.4.0
 urllib3==1.26.13
 uvicorn==0.20.0
+zope.interface==5.5.2
